[tool.poetry]
name = "yt-supercut"
version = "0.1.1"
description = ""
authors = ["redraw <redraw@sdf.org>"]
readme = "README.md"
packages = [{include = "yt_supercut"}]

[tool.poetry.scripts]
yt-supercut = "yt_supercut.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
yt-dlp = "^2023.3.4"
datasette = {version = "^0.64.3", extras = ["datasette"]}
datasette-youtube-embed = {version = "^0.1", extras = ["datasette"]}
tqdm = "^4.65.0"
webvtt-py = "^0.4.6"
tabulate = "^0.9.0"
sqlite-utils = "^3.32.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
